Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17915

V8 getter-in-prototype test asserts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.3, 5.0.0
    • 4.8.0
    • Qt Script
    • None
    • db17c14cace450e20745839014075c0263f8618f

    Description

      When running $QTDIR/tests/auto/qscriptv8testsuite getter-in-prototype, the following assert is triggered:

      ASSERTION FAILED: isCell()
      (../3rdparty/javascriptcore/JavaScriptCore/runtime/JSValue.h:603 QTJSC::JSCell* QTJSC::JSValue::asCell() const)
      QFATAL : tst_QScriptV8TestSuite::getter-in-prototype() Received signal 11
      FAIL!  : tst_QScriptV8TestSuite::getter-in-prototype() Received a fatal error.
         Loc: [Unknown file(0)]
      

      test/mjsunit tests are from V8 SVN revision 7023.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kenthans Kent Hansen (Inactive)
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes