Check that property descriptor members are valid before using them

Even if getPropertyDescriptor() returns true, it's not guaranteed
that PropertyDescriptor::setter() or PropertyDescriptor::value()
returns a valid JSC value.

This code is in an "#ifdef QT_BUILD_SCRIPT_LIB" block, i.e. a
patch we added on top of the original JSC sources.

The lack of checks caused the getter-in-prototype and
indexed-accessors tests from the V8 test suite to assert in
debug mode.

Cherry-picked from qt5/qtscript commit
db17c14cace450e20745839014075c0263f8618f

Task-number: QTBUG-17915
Change-Id: I55db26cfe4b63363be92a0b75f2c69b878ea9ef3
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>